# kittencaps

./: .editorconfig  .gitignore  README.md  flake.nix  justfile  lib.nix  pyproject.toml  references.md
assets/layouts/: moonlander-mk1.json  sample.json
assets/schemas/: generation-metadata-schema.json  theme-schema.json
assets/themes/: print.json  standard.json  theme-schema.json
pkgs/: default.nix  pkgs.nix
pkgs/icon-template-svg/: default.nix
pkgs/open-gorton/: default.nix
references/: ClothBall0.avif  CuteOrange0.avif  CuteOrange1.avif  Ghost0.avif
src/: calculate_centered_font_pos.py  generate_icon.py  package_archive.py  package_keycaps.py  rescale_things.py  sync.py  update_icon_palettes.py
src/blender/: assemble_render_keyboard.py
src/lib/: action.py  archive.py  browser.py  color.py  config.py  default.py  error.py  font.py  generation_metadata.py  iterator.py  keyboard_builder.py  kle_ext.py  magic.py  normalize.py  pos.py  project.py  render.py  shell.py  source.py  sp_color.py  svg.py  svg_builder.py  theme.py  utils.py
src/lib/svg/: __init__.py  path.py
