[tool.poetry]
name = "kittencaps"
version = "0.1.0"
description = "Programs for generating the open source keycap set Kittencaps"
authors = ["Rasmus Söderhielm <rasmus.soderhielm@gmail.com>"]
# readme = "README.md"
# license = "BSD"
packages = [
  { include = "src" }
]
include = [
  { path = "assets", format = ["sdist", "wheel"] }
]

[tool.poetry.scripts]
generate_icon = "src.generate_icon:run"
package = "src.package:run"

[tool.poetry.dependencies]
python = "^3.12.5"
lxml = "^5.3.0"
fonttools = {version="^4.54.1", extras=["woff"]}
damsenviet-kle = {git = "https://github.com/DamSenViet/kle-py", rev = "v1.0.1"}
jsonschema = "^3.2.0"
json5 = "^0.9.25 "
rich = "^13.9.4"
coloraide = "^4.1"
# So apparently attrs v24.3.0 (a dependency of coloraide) breaks when you try to
# to build it, and I haven't found a way of circumventing it... So we manually
# lock it at the lower version here and hope that it still works with coloraide.
attrs = "24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
